# desktop-serial

./: .gitignore  CMakeLists.txt  LICENSE  README.md  desktop-serial-manager.sh
assets/: resources.qrc
config/: config.h.in
firmware/: platformio.ini
firmware/src/: main.cpp
inc/: AppSettings.h  SerialManager.h  main.h  serialreader.h
src/: AppSettings.cpp  CMakeLists.txt  SerialManager.cpp  main.cpp  serialreader.cpp
ui/: AppResources.qrc  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  configure.h  configure.h.in  mainwindow.cpp  mainwindow.h  serialreader.cpp  serialreader.h
